[Shivganesh] Refactor: price parameter will be taken from the params
